app/styles/folder-layout.scss
.folder-container {
  --margin-top: 16px;
  position: relative;
  margin-top: var(--margin-top);
  height: calc(100% - var(--margin-top));
  width: 100%;
  overflow: hidden;
  padding-top: var(--margin-top);
  > *:nth-child(2) {
    margin-top: var(--margin-top);
  }
}

.folder-tabs {
  display: flex;
  position: relative;
  left: 40px;
}

.folder-body {
  position: absolute;
  border-radius: 16px 16px 0 0;
  overflow: hidden;
  top: 100%;
  left: -40px;
  width: 100%;
  height: 100%;
  transition-duration: 100ms;
}

.folder-button {
  position: relative;
  font-family: var(--ff-gc);
  font-size: var(--fs-folder-button);
  line-height: var(--lh-folder-button);
  font-weight: normal;
  text-transform: uppercase;
  color: var(--greyscale-0);
  padding: 16px;
  background-color: var(--folder-color);
  border-radius: 24px 24px 0 0;
  left: 22px;
  bottom: -1px;
  width: 217px;
  text-align: center;
  cursor: pointer;
  text-decoration: none;
  transition-duration: 100ms;
  &:hover {
    transition-duration: 150ms;
  }
}

.folder-content {
  border-radius: 16px 16px 0 0;
  height: 100%;
  width: 100%;
  transition-duration: 150ms;
  box-shadow: -4px 0px 4px 0px var(--color-drop-shadow);
  -webkit-box-shadow: -4px 0px 4px 0px var(--color-drop-shadow);
  -moz-box-shadow: -4px 0px 4px 0px var(--color-drop-shadow);
  overflow-y: auto;
  overscroll-behavior: none;
}

.folder-footer {
  position: absolute;
  bottom: 0;
  z-index: 100;
  background-color: var(--color-red-100);
  width: 100%;
  height: 64px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 40px;
  color: var(--greyscale-0);
  font-size: var(--mono-s-regular);
  font-weight: 400;
}

